...
	var body: some View {
		VStack(alignment: .leading) {
			DetailTitleText(lineText: menuItem.name)
				.padding(.bottom, 5)
			if isDrink {
				HStack {
					Text("Size of cup")
					Spacer()
					Picker(selection: $selectedCupSize, label: Text("size of cup")) {
						ForEach(0 ..< cupSizes.count, id: \.self) {index in
							Text(self.cupSizes[index].rawValue).tag(index)
						}
					}.accentColor(.onboardingAccentColor)
				}
				if menuItem.type == .hotDrinks {
					HStack {
						Text("Type of milk")
						Spacer()
						Picker(selection: $selectedMilkType, label: Text("Type of Milk")) {
							ForEach(0 ..< milkTypes.count, id: \.self) {index in
								Text(self.milkTypes[index].rawValue).tag(index)
							}
						}.accentColor(.onboardingAccentColor)
...
